[package]
name = "Secure-share-backend"
version = "0.1.0"
edition = "2024"

[dependencies]
argon2 = "0.5.1"
jsonwebtoken = "9.2.0"
aes = "0.7"
block-modes = "0.8"
rsa = "0.9"
rand = "0.8"
base64 = "0.22.1"
serde = { version = "1.0.183", features = ["derive"] }
serde_json = "1.0.104"
chrono = { version = "0.4.26", features = ["serde"] }
uuid = { version = "1.4.1", features = ["serde", "v4"] }
validator = { version = "0.16.1", features = ["derive"] }
sqlx = { version = "0.8.1", features = ["runtime-async-std-native-tls", "postgres", "chrono", "uuid"] }
dotenv = "0.15.0"
axum = { version = "0.7.6", features = ["multipart"]}
axum-extra = { version = "0.9.3", features = ["cookie"]}
tower = "0.5.0"
tower-http = { version = "0.5.2", features = ["cors","trace"] }
tokio = { version = "1.39.3", features = ["full"] }
async-trait = "0.1.72"
tokio-cron-scheduler = "0.13.0"